[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/menu_cursor.png" type="Texture" id=1]
[ext_resource path="res://MenuItemToggle.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/UITheme.tres" type="Theme" id=3]
[ext_resource path="res://IndividualOption.gd" type="Script" id=4]

[node name="MenuItemToggle" type="HBoxContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 162.0
margin_bottom = 14.0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 8.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 8 )

[node name="Cursor" type="TextureRect" parent="CenterContainer"]
visible = false
margin_top = 2.0
margin_right = 8.0
margin_bottom = 10.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 12.0
margin_top = 1.0
margin_right = 54.0
margin_bottom = 10.0
text = "Setting"

[node name="Option1" type="VBoxContainer" parent="."]
margin_left = 126.0
margin_right = 138.0
margin_bottom = 12.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 10
custom_constants/separation = 0
script = ExtResource( 4 )

[node name="OnLabel" type="Label" parent="Option1"]
margin_right = 12.0
margin_bottom = 9.0
text = "On"

[node name="Underline" type="ColorRect" parent="Option1"]
margin_top = 9.0
margin_right = 12.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 1 )
mouse_filter = 2

[node name="Option2" type="VBoxContainer" parent="."]
modulate = Color( 0.466667, 0.466667, 0.466667, 1 )
margin_left = 142.0
margin_right = 160.0
margin_bottom = 12.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
custom_constants/separation = 0
script = ExtResource( 4 )

[node name="OffLabel" type="Label" parent="Option2"]
margin_right = 18.0
margin_bottom = 9.0
text = "Off"

[node name="Underline" type="ColorRect" parent="Option2"]
visible = false
margin_top = 9.0
margin_right = 18.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 1 )
mouse_filter = 2
[connection signal="mouse_entered" from="." to="." method="_on_MenuItem_mouse_entered"]
[connection signal="gui_input" from="Option1" to="." method="_on_Option_gui_input" binds= [ 1 ]]
[connection signal="gui_input" from="Option2" to="." method="_on_Option_gui_input" binds= [ 2 ]]
